--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "paths": {
       "~/*": ["./app/*"]
     },
