--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
     "@remix-run/vercel": "^1.0.6",
+    "acd-utils": "8.0.0",
+    "await-to-js": "3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.6"
