--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
+    "baseUrl": ".",
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -12,7 +13,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "~components/*": ["./app/components/*"],
+      "~handles": ["./app/handles/index.ts"],
+      "~types/*": ["./app/types/*"],
+      "~utils/*": ["./app/utils/*"],
     },
 
     // Remix takes care of building everything in `remix build`.
