--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 node_modules
 
 .cache
-.vercel
 .output
 
 public/build
 api/build
 app/tailwind.css
+
+/netlify/functions/server/build
+/public/build
+/.netlify
