--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 node_modules
 
 .cache
+.vercel
 .output
 
 public/build
-api/build
+api/_build
 app/tailwind.css
-
-/netlify/functions/server/build
-/public/build
-/.netlify
+.env
