--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
       "~/*": ["./app/*"],
       "~components/*": ["./app/components/*"],
       "~handles": ["./app/handles/index.ts"],
+      "~sanity": ["./sanity/index.ts"],
       "~types/*": ["./app/types/*"],
-      "~utils/*": ["./app/utils/*"],
+      "~utils/*": ["./app/utils/*"]
     },
 
     // Remix takes care of building everything in `remix build`.
